fix sh script permissions